# django-at-stack-boilerplate

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml  vite.config.js
apps/accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/core/: api_urls.py  api_views.py  context_processors.py  health.py  middleware.py  sitemaps.py  views.py
apps/pages/: forms.py  tests.py  urls.py  views.py
config/: celery.py  urls.py
config/settings/: base.py  dev.py  prod.py
nginx/: nginx.prod.conf
requirements/: base.txt  dev.txt
scripts/: entrypoint.sh
static/src/css/: main.css
static/src/js/: main.js
templates/: base.html  robots.txt
templates/accounts/: base_auth.html  delete_account.html  login.html  password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html
templates/core/: health.html
templates/email/: password_reset_email.html  password_reset_subject.txt
templates/errors/: 403.html  404.html  500.html
templates/pages/: contact.html  contact_done.html  cookies.html  home.html  privacy.html  terms.html
templates/partials/: _cookie_consent.html  _footer.html  _messages.html  _meta_seo.html  _navbar.html  _schema_org.html  _vite_assets.html
